--- a/Functions_worksheet_One.ipynb
+++ b/Functions_worksheet_One.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 146,
    "id": "2a5fd017",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "30"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,18 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 137,
    "id": "3fb565f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sum_of_variables(a,b): # def - definiton of a function \n",
+    "def sum_of_variables(a,b):# def - definiton of a function \n",
+    "    \"\"\"This functaion gives the sum of two numbers\"\"\"\n",
     "    return a +b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 147,
    "id": "01bca211",
    "metadata": {},
    "outputs": [
@@ -46,7 +47,7 @@
        "30"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 148,
    "id": "929abc00",
    "metadata": {},
    "outputs": [],
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 149,
    "id": "2603d534",
    "metadata": {},
    "outputs": [
@@ -85,7 +86,7 @@
        "NoneType"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,18 +97,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 150,
    "id": "b72c7083",
    "metadata": {},
    "outputs": [],
    "source": [
     "def mul(x,y):\n",
+    "    \"\"\"This functaion gives the product of two numbers\"\"\"\n",
     "    return x*y\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 151,
    "id": "8db193b4",
    "metadata": {},
    "outputs": [
@@ -117,7 +119,7 @@
        "int"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 152,
    "id": "921a47e4",
    "metadata": {},
    "outputs": [
@@ -145,7 +147,7 @@
        "NoneType"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,18 +158,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 153,
    "id": "c95b7629",
    "metadata": {},
    "outputs": [],
    "source": [
     "def test1(a,b,c):\n",
+    "    \"\"\"This functaion gives the sum of two numbers with three arguments passed\"\"\"\n",
     "    return a + b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 154,
    "id": "7441fea4",
    "metadata": {},
    "outputs": [
@@ -178,7 +181,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-43-2012a26a6467>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Irrespective of the argumenst used inside the function we are supposed to pass apl the arguments\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-154-2012a26a6467>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Irrespective of the argumenst used inside the function we are supposed to pass apl the arguments\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: test1() missing 1 required positional argument: 'c'"
      ]
     }
@@ -189,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 155,
    "id": "5a0e071a",
    "metadata": {},
    "outputs": [],
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 156,
    "id": "7ba71a62",
    "metadata": {},
    "outputs": [
@@ -210,7 +213,7 @@
        "(5, 30, 30)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 157,
    "id": "58089410",
    "metadata": {},
    "outputs": [
@@ -231,7 +234,7 @@
        "tuple"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 158,
    "id": "2143356f",
    "metadata": {},
    "outputs": [],
@@ -252,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 159,
    "id": "48456206",
    "metadata": {},
    "outputs": [
@@ -262,7 +265,7 @@
        "10"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 160,
    "id": "64129c13",
    "metadata": {},
    "outputs": [
@@ -283,7 +286,7 @@
        "100"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 161,
    "id": "0f90f2f9",
    "metadata": {},
    "outputs": [
@@ -304,7 +307,7 @@
        "200"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 162,
    "id": "0fe576df",
    "metadata": {},
    "outputs": [],
@@ -325,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 163,
    "id": "f8525079",
    "metadata": {},
    "outputs": [
@@ -335,7 +338,7 @@
        "10"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 164,
    "id": "794660a8",
    "metadata": {},
    "outputs": [
@@ -356,7 +359,7 @@
        "100"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 165,
    "id": "960126e6",
    "metadata": {},
    "outputs": [
@@ -377,7 +380,7 @@
        "100"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 166,
    "id": "9e5edf5c",
    "metadata": {},
    "outputs": [
@@ -399,7 +402,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-63-dc68cc5e68a9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Gives error if have multiple returns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-166-dc68cc5e68a9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Gives error if have multiple returns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: test2() missing 2 required positional arguments: 'a' and 'b'"
      ]
     }
@@ -411,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 167,
    "id": "20921840",
    "metadata": {},
    "outputs": [],
@@ -423,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 168,
    "id": "301f010d",
    "metadata": {},
    "outputs": [
@@ -433,7 +436,7 @@
        "20"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 169,
    "id": "7207bb6d",
    "metadata": {},
    "outputs": [],
@@ -455,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 170,
    "id": "0ba67fa4",
    "metadata": {},
    "outputs": [
@@ -465,7 +468,7 @@
        "'This is a string '"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 171,
    "id": "07ef364e",
    "metadata": {},
    "outputs": [
@@ -486,7 +489,7 @@
        "'This is a string Ravi Shankar'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 172,
    "id": "2d11eb46",
    "metadata": {},
    "outputs": [],
@@ -508,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 173,
    "id": "ef0579b8",
    "metadata": {},
    "outputs": [
@@ -518,7 +521,7 @@
        "(7, 14)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 174,
    "id": "081f4386",
    "metadata": {},
    "outputs": [
@@ -539,7 +542,7 @@
        "([2, 3, 4, 5, 6, 67, 8], [2, 3, 4, 5, 6, 67, 8, 2, 3, 4, 5, 6, 67, 8])"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 175,
    "id": "749caba3",
    "metadata": {},
    "outputs": [],
@@ -561,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 176,
    "id": "0c060064",
    "metadata": {},
    "outputs": [
@@ -571,7 +574,7 @@
        "60"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 177,
    "id": "94dfeb15",
    "metadata": {},
    "outputs": [],
@@ -595,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 178,
    "id": "00dd8283",
    "metadata": {},
    "outputs": [
@@ -605,7 +608,7 @@
        "1"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 179,
    "id": "5f61b931",
    "metadata": {},
    "outputs": [],
@@ -628,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 180,
    "id": "29a9110d",
    "metadata": {},
    "outputs": [
@@ -638,7 +641,7 @@
        "(True, True, True)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 181,
    "id": "1365be55",
    "metadata": {},
    "outputs": [
@@ -659,7 +662,7 @@
        "(True, False, True)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 182,
    "id": "afbc7bf4",
    "metadata": {},
    "outputs": [
@@ -680,7 +683,7 @@
        "(False, True, True)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 183,
    "id": "ec65706c",
    "metadata": {},
    "outputs": [
@@ -701,7 +704,7 @@
        "(False, False, False)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 184,
    "id": "170c7709",
    "metadata": {},
    "outputs": [],
@@ -724,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 185,
    "id": "89eb0fd2",
    "metadata": {},
    "outputs": [
@@ -734,7 +737,7 @@
        "(('Ravishankar', [10, 20]), 'Ravi')"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 186,
    "id": "42e5eaac",
    "metadata": {},
    "outputs": [],
@@ -759,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 187,
    "id": "e8a5a8f8",
    "metadata": {},
    "outputs": [
@@ -769,7 +772,7 @@
        "[[10], [20], [30, 40, 50], 'Ravi', 'Shankar']"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 188,
    "id": "fbc2d5ec",
    "metadata": {},
    "outputs": [
@@ -790,7 +793,7 @@
        "[[10, 20, 30], (20, 30, 40)]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 189,
    "id": "b213cff9",
    "metadata": {},
    "outputs": [],
@@ -812,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 190,
    "id": "405899a7",
    "metadata": {},
    "outputs": [
@@ -822,7 +825,7 @@
        "[[10, 20], (40, 50)]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 191,
    "id": "e5440dc2",
    "metadata": {},
    "outputs": [],
@@ -848,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 192,
    "id": "0115da97",
    "metadata": {},
    "outputs": [
@@ -858,7 +861,7 @@
        "[[20, 30, 40], [11, 22, 33]]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 193,
    "id": "e8f885ac",
    "metadata": {},
    "outputs": [],
@@ -881,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 194,
    "id": "b8246fa4",
    "metadata": {},
    "outputs": [
@@ -891,7 +894,7 @@
        "{'v': 10, 'l': 'Ravi', 'a': [10, 20, 30], 'r': 20}"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 195,
    "id": "ead2556a",
    "metadata": {},
    "outputs": [
@@ -912,7 +915,7 @@
        "dict"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,14 +923,6 @@
    "source": [
     "type(test12(a = 10,r = 20))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed5dc855",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
