--- a/Opps_Class_Objects.ipynb
+++ b/Opps_Class_Objects.ipynb
@@ -1160,8 +1160,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "767f2bf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class yoga:\n",
+    "    def __init__(self,house,bike,car):\n",
+    "        self.house = house \n",
+    "        self.bike = bike \n",
+    "        self.car = car\n",
+    "        \n",
+    "    def display(self):\n",
+    "        return self.house, self.bike, self.car\n",
+    "    \n",
+    "class ravi(yoga):\n",
+    "    def __init__(self,pulsar_bike,*args):\n",
+    "        #super(ravi,self).__init__(*args)\n",
+    "        self.pulsar_bike = pulsar_bike\n",
+    "        yoga.__init__(self,*args)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    def ownbike(self):\n",
+    "        return self.pulsar_bike"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "c40e53ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj = ravi(\"Pilsar bike\",\"Chittoor\",\"Honda Bike\",\"Dzire car\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "e6b7cb84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pilsar bike'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.ownbike()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "627e69f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pilsar bike'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.pulsar_bike"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "993d7f5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Honda Bike'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.bike"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "602b8116",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dzire car'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.car"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "54374138",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Chittoor'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.house"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "0679e3dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Chittoor', 'Honda Bike', 'Dzire car')"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "671addbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new = yoga(\"Mittoor\",\"Honda\",\"Dzire\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "f4c14dc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Mittoor', 'Honda', 'Dzire')"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "16bc125a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Chittoor', 'Honda Bike', 'Dzire car')"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa7570d3",
    "metadata": {},
    "outputs": [],
    "source": []
